--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^1.0.5",
+    "@date-io/date-fns": "^1.3.13",
+    "date-fns": "^2.8.1",
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
