--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aws-amplify": "^3.3.24",
     "date-fns": "^2.8.1",
     "dotenv": "^8.2.0",
+    "moment": "^2.29.1",
     "notistack": "^1.0.5",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
